--- a/src/components/SearchHeader/SearchHeader.module.scss
+++ b/src/components/SearchHeader/SearchHeader.module.scss
@@ -24,24 +24,15 @@
 
 .mainTitle {
   color: #0f0f10;
-  font-size: 26px;
+  font-size: 26px !important;
   font-weight: 700;
 }
 
 .lowTitle {
-  font-size: 20px;
+  font-size: 20px !important;
   font-weight: 500;
-}
-
-.input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 508px;
-  height: 42px;
 }
 
 .searchInput {
   width: 403px;
 }
-
