--- a/src/components/VacancyCard/VacancyCard.module.scss
+++ b/src/components/VacancyCard/VacancyCard.module.scss
@@ -32,7 +32,7 @@
 }
 
 .applyButton {
-  border-color: #dee2e6;
+  border: none;
   color: black !important;
   font-size: 14px !important;
   font-weight: 400 !important;
@@ -43,4 +43,3 @@
     border-color: #adb5bd;
   }
 }
-
